load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")
load("@bazel_gazelle//:def.bzl", "gazelle")

gazelle(
    name = "gazelle",
    prefix = "github.com/mattjmcnaughton/tmplinux",
)

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/mattjmcnaughton/tmplinux",
    visibility = ["//visibility:private"],
    deps = ["//cmd:go_default_library"],
)

go_binary(
    name = "tmplinux",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
